--- a/Reporter/appsettings.json
+++ b/Reporter/appsettings.json
@@ -7,12 +7,21 @@
     }
   },
   "AllowedHosts": "*",
+  //"BaseURIs": {
+  //  "LiveGateway": "http://107.180.93.38:92/",
+  //  "LocalGateway": "",
+  //  "MainClient": "http://godp.co.uk:550/",
+  //  "SelfClient": "",
+  //  "FlutterWave": "https://api.flutterwave.com/v3/",
+  //  "PayStack": "",
+  //  "Other": ""
+  //}
   "BaseURIs": {
-    "LiveGateway": "http://107.180.93.38:92/",
-    "LocalGateway": "",
-    "MainClient": "http://godp.co.uk:550/",
-    "SelfClient": "",
-    "FlutterWave": "https://api.flutterwave.com/v3/",
+    "LiveGateway": "http://104.238.103.48:70/",
+    "LocalGateway": "http://localhost:18157",
+    "MainClient": "http://godp.co.uk:500/",
+    "SelfClient": "http://107.180.93.38:81/",
+    "FlutterWave": "",
     "PayStack": "",
     "Other": ""
   }
