--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -1,10 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=104.238.103.48, 1433;Initial Catalog=GOS_CREDIT; User ID=sa; Password=godp1234#;Integrated Security=False"
+    "DefaultConnection": "Data Source=###########;Initial Catalog=###########; User ID=###########; Password=###########;Integrated Security=False"
   },
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Data Source=107.180.93.38, 1433;Initial Catalog=GODP_ERP_CREDIT_SERVER_DB; User ID=sa; Password=godp1234#;Integrated Security=False"
-  //},
+ 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
